--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="X9lSUpx0f-5MbLlP_OnQzZovchxTOt1LNHFsrYG4ldI" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Download Sony Vegas 2022 Pro for free with the cracked latest version. Edit videos with ease and professionalism.">
